manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "mansong-letsencrypt-staging"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://mansong.ff-demo.co.uk"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type,Authorization"
    nginx.ingress.kubernetes.io/cors-expose-headers: "*"
  name: mansong-ingress-resource
  namespace: staging
spec:
  tls:
  - hosts:
    - mansong.ff-demo.co.uk
    secretName: mansong-staging-cert
  rules:
  - host: mansong.ff-demo.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gesturerecognition-svc
            port:
              number: 80
